feat: Azure DataLake compatibility + metadata addition (#77)
* feat: Azure DataLake compatibility + metadata addition

* style: Azure DataLake compatibility + metadata addition

Incorporation of review comments (with the exception of one open query/counter-suggestion regarding the creation of a builder):

Essentially
- Removal of "final" for local variables
- Removal of explicit paramaters for mock() where possible
- "var" where possible
The existing code, insofar as it is relevant for the Azure Blob extension, I have also adjusted.

* style: Azure DataLake compatibility + metadata addition

* style: Azure DataLake compatibility + metadata addition

* chore: update dependencies